<resources>
    <string name="app_name">fungus</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgetPasswordHint"><u>忘记密码？</u></string>
    <string name="about_us">
        \t\t拾菌（Fungi）是由中国科学院微生物研究所菌物标本馆和北京林业大学共同开发，适用于Android系统的菌物信息采集软件。\n\n
        \t\t本APP适合菌物学、植物病理学等相关专业研究人员、菌物爱好者和普通公众收集和管理菌物信息。研究人员可通过APP收集得到结构规范、信息精准的科学数据，为菌物分类、区域性分布、物种多样性调查和物种保护提供数据支撑。菌物爱好者和公众可通过APP了解菌物采集知识，学习不同菌物的采集方法。APP同样适用于菌物科普和教学。\n\n
        \t\t无论是研究人员或是普通公众，对菌物进行自然观察并记录，对该领域的科学研究都是大有益处的。\n\n
        \t\t欢迎加入拾菌，共同助力菌物学发展。\n\n

        \t\t联系我们:\n
        \t\tQQ用户交流群：1126826383\n
        \t\t联系电话：010-64807473\n\n
    </string>

    <string name="help_register">
        \t\t用户首次登录后需要先进行注册，在点击首页左上角的按钮或从左边侧滑打开菜单后，可以看到“注册”按钮，点击进入注册页面。
        页面中所有信息均为必填项，以下信息为<b>不可修改项:</b>\n\n

        \t\t\t\t\t\t\t *用户名\n
        \t\t\t\t\t\t\t *性别\n
        \t\t\t\t\t\t\t *密码\n
        \t\t\t\t\t\t\t *真名\n\n
    </string>

    <string name="help_login">
        \t\t 在首页侧滑菜单进入登录界面，输入用户名和密码即可登录。如果忘记密码，可以点击“忘记密码”进入密码找回界面，输入用户名，
        电话号码，和真实姓名即可找回密码。
    </string>

    <string name="help_setting">
        \t\t 在侧滑菜单进入设置界面，所有的个人信息会显示在页面中，用户可以对所有可以修改的信息进行修改，修改完毕后，点击“修改”按钮即可
        修改个人信息。
    </string>

    <string name="help_photo">
        \t\t 点击采集页面顶部的拍照按钮进入拍照界面选择照片类别，在对应的页面点击相机按钮即可拍照，拍到的照片会显示在页面中。每个类别最多拍摄
        9张照片，如果对现有的照片不满意，可以点击对应图片进行删除。
    </string>

    <string name="help_basic">
        \t\t 基本信息中，采集号和采集人为自动填写内容，采集号为真名+下标，采集人为真名。点击“产地”可以自动获取采集地址和采集时间。该功能
        需要获取网络权限，和GPS权限。基本信息的必填项为采集号，采集人，日期和产地。其他为非必填项。填写完成后可以选择保存或保存并填写更多信息。
        如果有必填项没有填写，则会进行提醒。如果需要填写详细信息，则必须选择菌物种类。
    </string>

    <string name="help_specific">
        \t\t 具体信息共有6个类别，分别是菌盖，菌肉，菌褶，菌柄，菌管，其他。同时还可以在该界面填写本条记录的描述，描述通过
        “更新描述”按钮进行保存。具体信息填写完成后，点击保存按钮进行保存。这些记录会保存在手机中，直到进行上传或导出。
    </string>

    <string name="help_upload">
        \t\t 当采集完一条和多条记录后，在首页可以选择上传或导出。选择“导出”后，所有<b>本次采集并且还未上传</b>的记录会被导出到
        /fungus/fungus.xls文件中，同时这些记录不会被删除。当选择“上传”后，所有<b>本次采集的记录</b>会被上传到服务器，并且在本地被删除。
        如果需要将记录保存到本地，请先选择导出，再上传。
    </string>

    <string name="help_basic_record">
        \t\t 在首页点击下方点击“我的记录”后可以查看所有登录用户上传到服务器的记录，如果还未登录则无法查看。记录的封面会显示用户头像，
        采集号，采集时间，封面图，中文名及地点等信息，点击封面右下角的垃圾桶图标可以删除这条记录。\n
        \t\t 点击封面可以进入基本信息查看页面，该页面会显示选中记录的所有基本信息，可以对信息进行修改。修改完成后可以点击“更新基本信息”
        进行保存，点击该按钮后记录会直接保存到服务器。
    </string>

    <string name="help_specific_record">
        \t\t 在基本信息查看页面点击“更新详细信息”后，会将修改过的基本信息保存到服务器，同时进入详细信息页面。填写完各项信息后，点击
        “更新”按钮后会将信息保存到服务器。
    </string>

    <string name="help_download">
        \t\t 在“我的记录”页面点击右下角的放大镜图标可以进行记录查找，输入相应的条件后点击“提交”按钮后，会显示所有符合条件的记录，所有
        条件均为非必填项。没有填写的条件会被忽略，如果所有信息均未被填写，则会显示所有记录。\n
        \t\t 在“我的记录”页面点击左下角的sd卡图标可以进入批量下载页面。目前可以根据日期和采集号范围进行批量下载，起始日期和起始采集号
        必须分别早于结束日期和结束采集号，如果不符合条件会自动进行提示。点击下载按钮后会将所有符合条件的记录下载到/fungus/fungus.xls文件中。\n
        \t\t 在基本信息查看页面点击右上角的下载按钮下载对应的记录，保存位置与批量下载的保存位置相同。
    </string>

</resources>
